--- a/index.html
+++ b/index.html
@@ -8,18 +8,10 @@
     <meta name="theme-color" content="#ffffff">
     <title>Revestimientos BROT</title>
     <meta name="description" content="Revestimientos impermeables, anti-huemdad, facil limpieza y facil instalacion">
-    <meta name="keywords" content="revestimientos, decoracion, paredes, diseño, interiores">
+    <meta name="keywords" content="revestimientos, decoracion, paredes, diseño, interiores, BROT, brot">
     <meta name="robots" content="index,follow">
     
-    <meta property="og:title" content="Revestimientos BROT: Innovacion en decoracion">
-    <meta property="og:description" content="Revestimientos impermeables, anti-humedad y fáciles de instalar.">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="https://tunozon.github.io/Entrega-Final/">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="BROT Revestimientos">
     <link rel="shortcut icon" href="./assets/Logo BROT.ico" type="image/x-icon">
-
-
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body-index">
